--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "keywords": [
     "gatsby"
   ],
+  "pre-commit": [
+    "lint"
+  ],
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "npm-run-all --parallel start tsm",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "tsc && eslint --fix",
+    "tsm": "./node_modules/.bin/tsm src --watch"
   },
   "dependencies": {
     "gatsby": "^4.21.1",
@@ -27,12 +32,31 @@
     "gatsby-transformer-sharp": "^4.21.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "sass": "^1.54.5"
+    "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
+    "config": "^3.3.7",
+    "sass": "^1.54.5",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
+    "@typescript-eslint/parser": "^5.10.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-only-warn": "^1.0.2",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "npm-run-all": "^4.1.5",
+    "pre-commit": "^1.2.2",
+    "typed-scss-modules": "^4.1.1"
   }
 }
