--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "tsm": "./node_modules/.bin/tsm src --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.2",
+    "classnames": "^2.3.1",
+    "config": "^3.3.7",
+    "dotenv": "^10.0.0",
     "gatsby": "^4.21.1",
     "gatsby-plugin-google-analytics": "^4.21.0",
     "gatsby-plugin-image": "^2.21.0",
@@ -30,11 +36,9 @@
     "gatsby-plugin-sitemap": "^5.21.0",
     "gatsby-source-filesystem": "^4.21.1",
     "gatsby-transformer-sharp": "^4.21.0",
+    "hamburger-react": "^2.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "classnames": "^2.3.1",
-    "dotenv": "^10.0.0",
-    "config": "^3.3.7",
     "sass": "^1.54.5",
     "typedi": "^0.10.0"
   },
@@ -42,7 +46,6 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "typescript": "^4.7.4",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
@@ -57,6 +60,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
-    "typed-scss-modules": "^4.1.1"
+    "typed-scss-modules": "^4.1.1",
+    "typescript": "^4.7.4"
   }
 }
