--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "hamburger-react": "^2.4.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-material-ui-carousel": "^3.4.2",
     "sass": "^1.54.5",
     "typedi": "^0.10.0"
   },
