--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gh-pages": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "pre-commit": "^1.2.2",
     "typed-scss-modules": "^4.1.1",
